# media-organizer

./: .gitignore  AGENTS.md  MediaOrganizer.csproj  MediaOrganizer.sln  Program.cs  README.md  index.html  mise.toml  package.json  pnpm-lock.yaml
Properties/PublishProfiles/: FolderProfile.pubxml
docs/: exiftool-sidecar.md
specs/001-organize-nas-media/: plan.md  spec.md  tasks.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  events.rs  filename.rs  logging.rs  main.rs  metadata.rs  models.rs  mover.rs  planner.rs  scanner.rs
src/components/: FileTable.tsx  StatusBar.tsx  Toolbar.tsx
src/lib/: api.ts  types.ts
