[package]
name = "media-organizer"
version = "0.1.0"
description = "Organize NAS media TODO folder"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio-util = "0.7"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
